Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97121

RTSP stream crash Video player

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.3.0 Alpha, 6.2
    • 6.2.0
    • Multimedia
    • None
    • Linux/X11
    • 9bb626d19f001ab7cf7719555f80ffe9837cd6b9 (qt/qtmultimedia/dev) 4a0c04b1539089d041875662ce46728d2a8796f5 (qt/qtmultimedia/6.2)

    Description

      When trying to play a RTSP stream (worked fine with Qt5) it crashes on Qt6, the app works fine when using file:// and http:// doesn't crash but didn't play.

      Not sure this warning is related (does not show when using file://):
      GLib-GObject-WARNING **: 11:14:08.927: invalid cast from 'GstRTSPSrc' to 'GstBaseSrc'

      1 ??
      2 QGstreamerMediaPlayer::uridecodebinElementAddedCallback qgstreamermediaplayer.cpp 557 0x7ffff056d413
      3 g_cclosure_marshal_VOID__OBJECTv 0x7ffff008961e
      4 g_signal_emit_valist 0x7ffff00a8724
      5 g_signal_emit 0x7ffff00a8893
      6 ?? 0x7ffff011acb4
      7 gst_bin_add 0x7ffff01168a3
      8 ?? 0x7fffdc2bc249
      9 gst_element_change_state 0x7ffff0140769
      10 ?? 0x7ffff0140e7d
      11 ?? 0x7ffff0119c5c
      12 ?? 0x7ffff016b5e6
      13 gst_element_change_state 0x7ffff0140769
      14 gst_element_change_state 0x7ffff01407af
      15 ?? 0x7ffff0140e7d
      16 QGstPipeline::setState qgstpipeline.cpp 277 0x7ffff0576db3
      17 QGstreamerMediaPlayer::setMedia qgstreamermediaplayer.cpp 634 0x7ffff056e203
      18 QMediaPlayerPrivate::setMedia qmediaplayer.cpp 217 0x7ffff0546ee2
      19 QMediaPlayerPrivate::setMedia qmediaplayer.cpp 161 0x7ffff0547374
      20 QMediaPlayer::setSource qmediaplayer.cpp 601 0x7ffff0547374
      ... <More>

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            dantti Daniel Nicoletti
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes