Properly detect whether a stream is seekable

Don't make assumptions about the gstreamer source element, the rtspsrc
is for example not a regular GstBaseSrc. Instead use a query on the
pipeline to determine whether our stream is seekable.

Fixes: QTBUG-97121
Change-Id: I935ea9fe399172a26b0fef6879d491cadadc47f3
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 9bb626d19f001ab7cf7719555f80ffe9837cd6b9)
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>